# shinra-engine

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  README.md  design.md
abi/: Cargo.toml
abi/src/: lib.rs
editor/: Cargo.toml
editor-server/: Cargo.toml
editor-server/src/: main.rs
editor/src/: main.rs
engine/: Cargo.toml
engine/src/: engine.rs  input.rs  lib.rs  mesh.rs  scene.rs  shader.wgsl
engine/src/presenter/: blit.wgsl  mod.rs  terminal.rs  window.rs
engine/tests/: render_smoke.rs
runner/: Cargo.toml
runner/src/: main.rs
scene/: Cargo.toml
scene/src/: lib.rs
vscode-ext/: .gitignore  .vscodeignore  package.json  playwright.config.ts  tsconfig.json
vscode-ext/e2e/: scene.spec.ts
vscode-ext/src/: extension.ts
