[package]
name = "editor-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "editor-server"
path = "src/main.rs"

[dependencies]
axum          = { version = "0.7", features = ["ws"] }
tokio         = { version = "1", features = ["full"] }
bytes         = "1"
openh264      = "0.6"
anyhow        = "1"
wgpu          = "27"
glam          = "0.28"
shinra-engine = { path = "../engine" }
scene         = { path = "../scene" }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
ron           = "0.10"
