[package]
name = "shinra-engine"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
wgpu = "27"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.28"
tobj = "4"
image = "0.24"
viuer = "0.7"
crossterm = "0.27"
anyhow = "1"
gametok-abi = { path = "../abi" }
hecs = "0.10"
